--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -339,12 +339,14 @@
    "id": "703701c0",
    "metadata": {},
    "source": [
+    "- NOTE: only 44 of the original 71 statements are diagnostics and will be used\n",
+    "\n",
     "### Applying diagnostic superclass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b23e53c3",
    "metadata": {},
    "outputs": [
@@ -366,7 +368,7 @@
        "Name: diagnostic_superclass, Length: 5158, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +383,8 @@
     "    \n",
     "# Apply diagnostic superclass\n",
     "Y['diagnostic_superclass'] = Y.scp_codes.apply(aggregate_superclass_diagnostic)\n",
-    "#Y['diagnostic_superclass_len'] = Y['diagnostic_superclass'].apply(len)\n",
+    "# Apply length of diagnostic superclass\n",
+    "Y['diagnostic_superclass_len'] = Y['diagnostic_superclass'].apply(len)\n",
     "Y.loc[Y.diagnostic_superclass_len > 1, 'diagnostic_superclass']"
    ]
   },
@@ -427,6 +430,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "60ae91b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution of the Length of the diagnostic superclasses:\n",
+      "diagnostic_superclass_len\n",
+      "1    16272\n",
+      "2     4079\n",
+      "3      920\n",
+      "0      407\n",
+      "4      159\n",
+      "Name: count, dtype: int64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the distribution of the Length of the diagnostic superclasses\n",
+    "print('Distribution of the Length of the diagnostic superclasses:')\n",
+    "print(Y['diagnostic_superclass_len'].value_counts(), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1400b036",
+   "metadata": {},
+   "source": [
+    "- Only 407 unclassified samples\n",
+    "- Up to 4 superclasses on the same ECG record"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3118f2cf",
    "metadata": {},
@@ -436,8 +476,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "882bfb2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ecg_id\n",
+       "26                    [sub_STTC, sub_NST_]\n",
+       "28                    [sub_STTC, sub_NST_]\n",
+       "39           [sub_STTC, sub_IMI, sub_NST_]\n",
+       "45       [sub_RVH, sub_IRBBB, sub_RAO/RAE]\n",
+       "50                     [sub_IVCD, sub_LMI]\n",
+       "                       ...                \n",
+       "21821                [sub_IRBBB, sub_NORM]\n",
+       "21827                  [sub_IMI, sub_ISCA]\n",
+       "21828                  [sub_IMI, sub_ISCA]\n",
+       "21829                [sub_IRBBB, sub_NORM]\n",
+       "21832            [sub_LAFB/LPFB, sub_IVCD]\n",
+       "Name: diagnostic_subclass, Length: 6191, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def aggregate_suberclass_diagnostic(y_dic):\n",
+    "    tmp = []\n",
+    "    for key in y_dic.keys():\n",
+    "        if key in agg_df.index:\n",
+    "            tmp.append(agg_df.loc[key].diagnostic_subclass)\n",
+    "    ret = list(set(tmp))\n",
+    "    ret = ['sub_'+r for r in ret]\n",
+    "    return ret\n",
+    "\n",
+    "# Apply diagnostic subclass\n",
+    "Y['diagnostic_subclass'] = Y.scp_codes.apply(aggregate_suberclass_diagnostic)\n",
+    "# Apply length of diagnostic subclass\n",
+    "Y['diagnostic_subclass_len'] = Y['diagnostic_subclass'].apply(len)\n",
+    "Y.loc[Y.diagnostic_subclass_len > 1, 'diagnostic_subclass']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5aac4426",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution of diagnostic subclasses:\n",
+      "diagnostic_subclass\n",
+      "sub_NORM         9528\n",
+      "sub_IMI          3281\n",
+      "sub_AMI          3086\n",
+      "sub_STTC         2244\n",
+      "sub_LVH          2137\n",
+      "sub_LAFB/LPFB    1800\n",
+      "sub_ISC_         1275\n",
+      "sub_IRBBB        1118\n",
+      "sub_ISCA          944\n",
+      "sub__AVB          827\n",
+      "sub_IVCD          789\n",
+      "sub_NST_          770\n",
+      "sub_CRBBB         542\n",
+      "sub_CLBBB         536\n",
+      "sub_LAO/LAE       427\n",
+      "sub_ISCI          398\n",
+      "sub_LMI           201\n",
+      "sub_RVH           126\n",
+      "sub_RAO/RAE        99\n",
+      "sub_WPW            80\n",
+      "sub_ILBBB          77\n",
+      "sub_SEHYP          30\n",
+      "sub_PMI            17\n",
+      "Name: count, dtype: int64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the distribution of the diagnostic subclasses\n",
+    "print('Distribution of diagnostic subclasses:')\n",
+    "print(Y['diagnostic_subclass'].explode().value_counts(), '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8a396100",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution of the Length of the diagnostic subclasses:\n",
+      "diagnostic_subclass_len\n",
+      "1    15239\n",
+      "2     4171\n",
+      "3     1439\n",
+      "4      475\n",
+      "0      407\n",
+      "5      102\n",
+      "6        4\n",
+      "Name: count, dtype: int64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the distribution of the Length of the diagnostic subclasses\n",
+    "print('Distribution of the Length of the diagnostic subclasses:')\n",
+    "print(Y['diagnostic_subclass_len'].value_counts(), '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d911ccc8",
    "metadata": {},
    "outputs": [],
    "source": []
