storing and notes

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2913,6 +2913,54 @@
     "print('data shape', x_test.shape)\n",
     "y_test"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9abd9602",
+   "metadata": {},
+   "source": [
+    "## Save Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "517fdcf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'x_train' (ndarray)\n",
+      "Stored 'y_train' (DataFrame)\n",
+      "Stored 'x_valid' (ndarray)\n",
+      "Stored 'y_valid' (DataFrame)\n",
+      "Stored 'x_test' (ndarray)\n",
+      "Stored 'y_test' (DataFrame)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the data in jupyter cache\n",
+    "\n",
+    "%store x_train\n",
+    "%store y_train\n",
+    "%store x_valid\n",
+    "%store y_valid\n",
+    "%store x_test\n",
+    "%store y_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6212c38f",
+   "metadata": {},
+   "source": [
+    "### IMPORTANT NOTES\n",
+    "- x is of type ndarray and y is pandas DataFrame, so be aware of indexes\n",
+    "- the meta_features are not included in the X data, but are available in the y data for model purposes"
+   ]
   }
  ],
  "metadata": {
