1dcnn implement attempt

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -293,7 +293,7 @@
    "id": "0a56d140",
    "metadata": {},
    "source": [
-    "('age', 'sex', 'height' and 'weight' we will obviously use as features, as they are basic demographic information about the patient)\n",
+    "('age', 'sex', 'height' and 'weight' we can obviously use as features, as they are basic demographic information about the patient)\n",
     "\n",
     "Other highly relevant columns that will not used for modeling are:\n",
     "- strat_fold: these will be used for cross-validation and splitting of the DS\n",
@@ -2924,7 +2924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 129,
    "id": "517fdcf2",
    "metadata": {},
    "outputs": [
@@ -2958,7 +2958,7 @@
    "metadata": {},
    "source": [
     "### IMPORTANT NOTES\n",
-    "- x is of type ndarray and y is pandas DataFrame, so be aware of indexes\n",
+    "- x is of type ndarray and y is pandas DataFrame, so be aware of indecies\n",
     "- the meta_features are not included in the X data, but are available in the y data for model purposes"
    ]
   }
